# python-project-51

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pytest.yml
page_loader/: __init__.py  engine.py  error_handler.py  io_engine.py  loader.py  logger.py  name_assigner.py  name_generator.py  network.py
page_loader/scripts/: cli.py  page_loader.py
tests/: test_page_loader.py
tests/fixtures/assets/: application.css  runtime.js
